hw_3/nfs-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-pod
spec:
  containers:
    - name: nfs-client
      image: busybox
      volumeMounts:
      - name: data
        mountPath: /mnt
      # command: ["/bin/sh"]
      # args: ["-c", "sleep 50"]
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: pvc-nfs
